fix: some errors overlapped the header, making it impossible to switch mode

--- a/frank-flow/src/frontend/src/assets/styles/_globals.scss
+++ b/frank-flow/src/frontend/src/assets/styles/_globals.scss
@@ -24,3 +24,7 @@ body {
 .monaco-editor__line--highlighted {
   background: var(--accent-transparant);
 }
+
+.toast-container {
+  z-index: 10;
+}
